--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mobx": "^6.3.10",
+    "mobx-react": "^7.2.1",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
